# cleanup-mac

./: .gitignore  CONTRIBUTING.md  LICENSE  MANUAL.md  Makefile  README.md  cleanup_mac.py  pyproject.toml
.github/workflows/: tests.yml
.serena/: project.yml
cleanup_mac/: __init__.py  __main__.py  _util.py  _version.py  bundle.py  cli.py  execute.py  logger.py  packagers.py  render.py  safety.py  scanners.py  types.py  updater.py
docs/superpowers/plans/: 2026-04-20-github-release-local-build.md
scripts/: bump-version.sh  gen-manifest.py
tests/: conftest.py  test_bundle_id.py  test_cli.py  test_execute.py  test_executor.py  test_gen_manifest.py  test_interactive.py  test_logger.py  test_main.py  test_path_safety.py  test_render_json.py  test_render_terminal.py  test_scan_aggressive.py  test_scan_leftovers.py  test_scan_logs.py  test_scan_package_managers.py  test_scan_user_caches.py  test_scan_xcode.py  test_types.py  test_updater.py  test_utilities.py  test_whitelist.py
